force-app/main/default/objects/Cycle_Step__c/Cycle_Step__c.object-meta.xml
<CustomObject>
    <label>Cycle Step</label>
    <nameField>
        <label>Cycle Steps Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cycle Steps</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>