force-app/main/default/objects/Cycle_Step__c/fields/Cycle_Step_Type__c.field-meta.xml
<CustomField>
    <fullName>Cycle_Step_Type__c</fullName>
    <label>Cycle Step Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Step_Type</valueSetName>
    </valueSet>
</CustomField>