force-app/main/default/objects/Cycle_Step__c/fields/E2__c.field-meta.xml
<CustomField>
    <fullName>E2__c</fullName>
    <label>E2</label>
    <length>10</length>
    <type>Text</type>
</CustomField>