force-app/main/default/objects/Cycle_Step__c/fields/Expected_Paramaters__c.field-meta.xml
<CustomField>
    <fullName>Expected_Paramaters__c</fullName>
    <label>Expected Paramaters</label>
    <length>255</length>
    <type>Text</type>
</CustomField>