force-app/main/default/objects/Cycle_Step__c/fields/LH__c.field-meta.xml
<CustomField>
    <fullName>LH__c</fullName>
    <label>LH</label>
    <length>10</length>
    <type>Text</type>
</CustomField>