force-app/main/default/objects/Cycle_Step__c/fields/P4__c.field-meta.xml
<CustomField>
    <fullName>P4__c</fullName>
    <label>P4</label>
    <length>10</length>
    <type>Text</type>
</CustomField>