force-app/main/default/objects/Cycle_Step__c/fields/Tests_To_Be_Undertaken__c.field-meta.xml
<CustomField>
    <fullName>Tests_To_Be_Undertaken__c</fullName>
    <label>Tests To Be Undertaken</label>
    <length>255</length>
    <type>Text</type>
</CustomField>